# pyhank

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE.txt  README.md  README.rst  __init__.py  dev_requirements.txt  hankel.py  pyproject.toml  release.py  requirements-legacy.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml
docs/: conf.py  example.py  hankel.rst  index.rst  installation.rst  intro.rst  one_shot.rst  requirements.txt  scaling_results.txt  summary.rst
docs/examples/: README.rst  helper.py  known_transforms.py  literature_comparison.py  one_shot_example.py  simple_example.py  speed_usage_example.py  usage_example.py
docs/source/: conf.py  index.rst
examples/: example.py
pyhank/: __init__.py  hankel.py  one_shot.py
tests/: conftest.py  test_against_matlab.py  test_hankel.py  test_one_shot.py  test_release.py
tests/matlab/: License.txt  bessel_zeros.m  hankel_example.m  hankel_matrix.m  iqdht.m  qdht.m
