[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# This section enables setuptools_scm

[tool.setuptools]
packages = ["pyhank"]

[tool.setuptools.package-data]
"pyhank" = ["matlab/*.m", "matlab/License.txt"]

[project]
name = "pyhank"
dynamic = ["version"]
authors = [{ name = "Edward Rogers", email = "etfrogers@hotmail.com" }]
description = "pyhank - Quasi-discrete Hankel transforms for python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=2.2.2",
    "scipy~=1.15.0; python_version == '3.10'",
    "scipy~=1.17.0; python_version > '3.10'",
]

[project.urls]
Homepage = "https://github.com/etfrogers/pyhank"

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
    "flake8~=7.3",
    "pytest-flake8~=1.3",
    "pytest-cov~=7.0",
    "setuptools_scm",
]
docs = [
    "sphinx-gallery~=0.20",
    "sphinx_rtd_theme~=3.1",
    "pillow~=12.2",
    "matplotlib~=3.10",
]
