[metadata]
name = pyhank
author = Edward Rogers
author_email = etfrogers@hotmail.com
description = pyhank - Quasi-discrete Hankel transforms for python
url = https://github.com/etfrogers/pyhank
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = pyhank
# exclusion via setup.cfg is broken currently, see https://github.com/pypa/setuptools/issues/2688
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
